Basic DES simulation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(cxx-des)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(cxx-des-1 cxx-des-1.cpp)
+target_include_directories(cxx-des-1 PRIVATE "${CMAKE_SOURCE_DIR}/include")
 target_compile_options(cxx-des-1 PRIVATE "--std=c++20" "-fcoroutines")
