--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 20)
 add_library(cxx_des::cxx_des INTERFACE IMPORTED)
 target_include_directories(cxx_des::cxx_des INTERFACE "${PROJECT_SOURCE_DIR}/include")
 target_compile_options(cxx_des::cxx_des INTERFACE "--std=c++20")
-target_compile_definitions(cxx_des::cxx_des INTERFACE "CXX_DES_SAFE")
+target_compile_definitions(cxx_des::cxx_des INTERFACE "CXXDES_SAFE")
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     target_compile_options(cxx_des::cxx_des INTERFACE "-fcoroutines")
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
