More compiler warnings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,15 @@ else()
     endif()
 endif()
 
+# default error levels
+if (MSVC)
+    # warning level 4 and all warnings as errors
+    add_compile_options(/W4 /WX)
+else()
+    # lots of warnings and all warnings as errors
+    add_compile_options(-Wall -Wextra -pedantic -Werror)
+endif()
+
 # clang tidy
 if (CXXDES_CLANG_TIDY)
     find_program(CLANG_TIDY_EXE NAMES "clang-tidy")
