--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,11 +75,11 @@ endif ()
 
 # default error levels
 if (MSVC)
-    # warning level 4 and all warnings as errors
-    add_compile_options(/W4 /WX)
+    # warning level 4
+    add_compile_options(/W4) # /WX for warnings as errors
 else ()
-    # lots of warnings and all warnings as errors
-    add_compile_options(-Wall -Wextra -pedantic) # -Werror)
+    # lots of warnings
+    add_compile_options(-Wall -Wextra -pedantic) # -Werror for warnings as errors
 endif ()
 
 # clang tidy
