--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-22.04 ]
-        compiler: [ 'g++-12', 'g++-11', 'clang-14', 'clang-13' ]
+        compiler: [ 'g++-12', 'g++-11', 'clang-14' ]
         build_type: [ 'Debug', 'Release' ]
     env:
       MATRIX_OS: ${{ matrix.os }}
